# extra-cosmic-xkill-applet

./: .editorconfig  .gitignore  Cargo.toml  INSTALL.md  LICENSE  PACKAGING.md  README.md  build-deb.sh  config.example.toml  justfile  manifest.yaml
.github/: dependabot.yml
.github/workflows/: rust.yml
debian/: changelog  control
src/: config.rs  events.rs  lib.rs  logging.rs  main.rs  ui.rs  wayland.rs  x11.rs
tests/: config_test.rs  wayland_test.rs
