[package]
name = "extra-cosmic-xkill"
version = "0.1.0"
edition = "2021"
authors = ["Vitória Maria <vitoria.maria@example.com>"]
description = "Applet sistema para gerenciamento de janelas X11/Wayland"
license = "MIT"

[dependencies]
x11rb = "0.9"
anyhow = "1.0"
wayland-client = "0.29"
wayland-protocols = { version = "0.29", features = ["client"] }
gtk = "0.15"
glib = "0.15"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "xkill-applet"
path = "src/main.rs"
